crates/anodized/tests/compile_fail/spec_on_trait_const.rs
#![no_main]

use anodized::spec;

#[spec]
trait T {
    #[spec]
    const C: i32;
}
